Replace ImmutableList.of with List.of
This removes one import from each class.

JIRA: LIGHTY-231
Signed-off-by: tobias.pobocik <tobias.pobocik@pantheon.tech>